--- a/cssh/Makefile
+++ b/cssh/Makefile
@@ -3,15 +3,15 @@ PDF = $(addsuffix .pdf, $(BASENAME))
 TEX = $(addsuffix .tex, $(BASENAME))
 PDFLATEX = pdflatex
 OUT_DIR = texfiles
-#HIGHLIGHT_DIR = code
+HIGHLIGHT_DIR = code
 
 .PHONY: clean all
 
 all: $(PDF)
 
-#$(PDF): $(TEX) $(HIGHLIGHT_DIR)/Makefile
-$(PDF): $(TEX)
-#	-test -d $(HIGHLIGHT_DIR) && make -C $(HIGHLIGHT_DIR)
+$(PDF): $(TEX) $(HIGHLIGHT_DIR)/Makefile
+#$(PDF): $(TEX)
+	-test -d $(HIGHLIGHT_DIR) && make -C $(HIGHLIGHT_DIR)
 	-test -d $(OUT_DIR) || mkdir $(OUT_DIR)
 	# Twice, so TOC is also updated
 	$(PDFLATEX) -output-directory $(OUT_DIR) $<
@@ -23,4 +23,4 @@ $(PDF): $(TEX)
 clean:
 	-rm -rf $(OUT_DIR) *~
 	-rm -f $(PDF)
-#	-test -d $(HIGHTLIGHT_DIR) && make -C $(HIGHLIGHT_DIR) clean
+	-test -d $(HIGHTLIGHT_DIR) && make -C $(HIGHLIGHT_DIR) clean
