manage-git: rename git to manage-git

--- a/manage-git/Makefile
+++ b/manage-git/Makefile
@@ -1,4 +1,4 @@
-BASENAME = git
+BASENAME = git-manage
 PDF = $(addsuffix .pdf, $(BASENAME))
 TEX = $(addsuffix .tex, $(BASENAME))
 PDFLATEX = pdflatex
