cssh: Update Makefile to take into account highlight version

--- a/cssh/code/Makefile
+++ b/cssh/code/Makefile
@@ -1,5 +1,10 @@
 TEXFILES = commands.tex
-HIGHLIGHT_OPTS = -L -l -f -t 8 -S Bash -K footnotesize -c highlight.sty
+
+ifeq (3, $(shell highlight --version | head -2 | tail -1 | rev | cut -d ' ' -f 1 | rev | cut -d '.' -f 1))
+	HIGHLIGHT_OPTS = -O latex -l -f -t 8 -K tiny -S bash -c highlight.sty
+else
+	HIGHLIGHT_OPTS = -L -l -f -t 8 -K tiny -S bash -c highlight.sty
+endif
 
 .PHONY: all clean
 
