Update global gitignore file
Ignore temporary files and common output files (object files, archive
files etc.)

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
-/redmine/
+*~
+*.o
+*.zip
+*.rar
+*gz
+*bz2
+*.obj
+*.a
+*.so
+*.lib
+*.dll
+*.swp
+*.swo
+tags
+TAGS
+*.exe
+*.class
+*.jar
+*.pyc
