de-ce-asamblare: Rename source code files for matrix walking
Remove "major" word.

--- a/de-ce-asamblare/code/Makefile
+++ b/de-ce-asamblare/code/Makefile
@@ -2,16 +2,16 @@ CFLAGS = -Wall
 
 .PHONY: all clean
 
-all: walk_matrix_column_major walk_matrix_row_major
+all: walk_matrix_by_column walk_matrix_by_row
 
-walk_matrix_column_major: walk_matrix_column_major.o
+walk_matrix_by_column: walk_matrix_by_column.o
 
-walk_matrix_column_major.o: walk_matrix_column_major.c
+walk_matrix_by_column.o: walk_matrix_by_column.c
 
-walk_matrix_row_major: walk_matrix_row_major.o
+walk_matrix_by_row: walk_matrix_by_row.o
 
-walk_matrix_row_major.o: walk_matrix_row_major.c
+walk_matrix_by_row.o: walk_matrix_by_row.c
 
 clean:
 	-rm -f *.o
-	-rm -f walk_matrix_column_major walk_matrix_row_major
+	-rm -f walk_matrix_by_column walk_matrix_by_row
