de-ce-asamblare: Rename print_n_square to print_n_xor

--- a/de-ce-asamblare/code/asm/Makefile
+++ b/de-ce-asamblare/code/asm/Makefile
@@ -2,7 +2,7 @@ LDFLAGS = -m32
 
 .PHONY: all clean
 
-all: hello print_n print_n_square
+all: hello print_n print_n_xor
 
 hello: hello.o
 
@@ -14,11 +14,11 @@ print_n: print_n.o
 print_n.o: print_n.asm
 	nasm -f elf32 -o $@ $<
 
-print_n_square: print_n_square.o
+print_n_xor: print_n_xor.o
 
-print_n_square.o: print_n_square.asm
+print_n_xor.o: print_n_xor.asm
 	nasm -f elf32 -o $@ $<
 
 clean:
 	-rm -f *.o *~
-	-rm -f hello
+	-rm -f hello print_n print_n_xor
